<resources>
    <string name="rutoken">Rutoken</string>
    <string name="app_name">DemoShift</string>
    <string name="user_position">Position</string>
    <string name="user_organization">Organization</string>
    <string name="user_certificate_expires">Certificate expires</string>
    <string name="field_not_set">&lt;not set&gt;</string>
    <string name="choose_user">Choose user</string>
    <string name="choose_certificate">Choose certificate</string>
    <string name="sign">Sign</string>
    <string name="back_to_user_list">Back to the user list</string>
    <string name="copy_text">Copy</string>
    <string name="error_text">Something went wrong.\nTry  the operation again</string>
    <string name="add_user">Add user</string>
    <string name="pin_hint">Enter PIN</string>
    <string name="pin_continue">Continue</string>
    <string name="processing">Please wait, processing…</string>
    <string name="done">Done</string>
    <string name="connect_token"><b>Connect Rutoken</b>\n\n</string>
    <string name="waiting_token">\nConnection type depends on Rutoken model.\n
                            \nFor <b>NFC-enabled Rutoken</b>: turn on NFC on your mobile device and hold Rutoken near it.\n
                            \nFor <b>Bluetooth-enabled Rutoken</b>: turn on Bluetooth on your mobile device and pair it with Rutoken.\n
                            \nFor <b>USB-enabled Rutoken</b>: connect Rutoken to your mobile device via USB.</string>
    <string name="add_user_ok">User has been added</string>
    <string name="share_result">Share the document and the signature</string>
    <string name="multivalued_rdn">Multiple RDN values with the same type</string>
    <string name="rdn_not_found">Suitable RDNs are not found</string>
    <string name="pin_incorrect">PIN is incorrect</string>
    <string name="pin_locked">The limit of incorrect PIN entering has been exceeded</string>
    <string name="key_pair_not_found">Cannot find the corresponding key pair for the certificate</string>
    <string name="certificate_not_found">Cannot find the certificate</string>
    <string name="wrong_rutoken">The user is registered with another Rutoken device</string>
    <string name="connection_lost">Connection with the Rutoken has been lost</string>
    <string name="user_duplicates">User with this Rutoken is already registered</string>
    <string name="file_unavailable">The chosen file is unavailable</string>
    <string name="no_user">Users are not registered yet</string>
    <string name="user_removed">User has been removed</string>
    <string name="undo">Undo</string>
    <string name="select_file">Select file</string>
    <string name="can_not_display_file">Selected file can not be displayed\n\nOnly PDF files can be displayed</string>
    <string name="too_many_tokens">Several Rutokens are connected to the device\n\nPlease leave only one</string>
    <string name="algorithm">Algorithm</string>
    <string name="inn">INN</string>
    <string name="innle">INNLE</string>
    <string name="ogrn">OGRN</string>
    <string name="ogrnip">OGRNIP</string>
    <string name="gost_r_3410_2012_256">GOST R 34.10–2012 256 bit</string>
    <string name="gost_r_3410_2012_512">GOST R 34.10–2012 512 bit</string>
    <string name="gost_r_3410_2001">GOST R 34.10–2001</string>
    <string name="message_no_pcsc">This application requires Rutoken Control Panel being installed</string>
    <string name="title_no_pcsc">Rutoken Panel not found</string>
    <string name="exit">Exit</string>
    <string name="install">Install</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>
