<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/certificateView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_spacing"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginBottom="@dimen/default_spacing"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/material_on_surface_emphasis_high_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:text="@string/user_position"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:text="@string/user_organization"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:textAppearance="?attr/textAppearanceBody1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:alpha="@dimen/material_emphasis_medium"
                android:text="@string/inn"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:alpha="@dimen/material_emphasis_medium"
                android:textAppearance="?attr/textAppearanceCaption" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:alpha="@dimen/material_emphasis_medium"
                android:text="@string/ogrn"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ogrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:alpha="@dimen/material_emphasis_medium"
                android:textAppearance="?attr/textAppearanceCaption" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:text="@string/algorithm"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/algorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:text="@string/user_certificate_expires"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userCertificateExpires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:alpha="@dimen/material_emphasis_medium"
            android:textAppearance="?attr/textAppearanceBody1" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>