<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/min_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:layout_marginRight="@dimen/min_margin"
        android:minHeight="@dimen/user_min_height"
        app:strokeColor="@color/rutokenBlue"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:text="@string/user_position"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/min_margin"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:text="@string/user_organization"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/min_margin"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:text="@string/user_certificate_expires"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_certificate_expires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/min_margin"
                android:paddingBottom="@dimen/min_margin"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>